# cs320-fall-2024

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
assigns/assign00/: assign00.opam  dune-project
assigns/assign00/lib/: dune
assigns/assign00/test/: dune  test_assign00.ml
assigns/assign01/: dune-project
assigns/assign02/: dune-project
assigns/assign03/: dune-project
assigns/assign04/: dune-project
assigns/assign05/: dune-project
assigns/assign06/: dune-project
assigns/assign07/: assign07.opam  dune-project
assigns/interp01/: dune-project  interp01.opam
assigns/interp02/: dune-project
assigns/interp03/: dune-project  examples.ml
labs/lab01/: lab01.ml
labs/lab02/: lab02.ml
labs/lab03/: lab03_june.ml  lab03_june_01.ml  lab03_june_02.ml  lab03_june_03.ml
labs/lab04/: lab04_june.ml  lab04_june_01.ml  lab04_june_02.ml  lab04_june_03.ml
labs/lab05/: lab05_june.ml  lab05_june_01.ml  lab05_june_02.ml  lab05_june_03.ml
labs/lab11_june/: dune-project
labs/lab11_june/examples/: test01.txt
labs/lab11_june/lib/: dune  eval.ml  lex.mll  tcheck.ml
lectures/09-03/: lec1.ml
lectures/09-19/: lec6.txt
lectures/09-24/: lec7.txt
lectures/09-26/: lec8.txt
lectures/10-08/: lec11.txt
lectures/10-24/parser_demo/: dune-project
lectures/10-24/parser_demo/lib/: dune
lectures/10-24/parser_demo/lib/parser/: lex.mll  par.mly
lectures/10-24/parser_demo/lib/utils/: utils.ml
lectures/12-03/: arith-stack.ml  compile.ml
stdlib320/: dune-project  stdlib320.opam
stdlib320/lib/: dune  stdlib320.ml  stdlib320.mli
(+254 files in other folders)
